# ld47-actix

./: .env  .gitignore  Cargo.toml  Dockerfile  cert.pem  key.pem
migrations/2020-10-03-121215_init/: down.sql  up.sql
src/: actions.rs  config.rs  main.rs  models.rs  new_models.rs  schema.rs  server.rs  simulator.rs
