[package]
name = "ld47-actix"
version = "0.1.0"
authors = ["Sarthak Singh <ss269@uw.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-codec = "0.3.0"
actix-web = "3.1"
actix-web-actors = "3.0.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }